--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ExpenseTracker">
         <activity
+            android:name=".presentation.app_ui.AddExpenseActivity"
+            android:exported="false"
+            android:label="@string/title_activity_add_expense"
+            android:theme="@style/Theme.ExpenseTracker" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
